<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Layout" >
    
<TextView android:id="@+id/HeaderLabel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/headerLabel"/>
<RadioGroup android:id="@+id/backgroundColors"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton android:id="@+id/defaultWhiteButton"
        android:text="@string/defaultWhiteButton"
        android:checked="true"/>
    <RadioButton android:id="@+id/redButton"
        android:text="@string/redButton"/> 
    <RadioButton android:id="@+id/blueButton"
        android:text="@string/blueButton"/>
    <RadioButton android:id="@+id/greenButton"
        android:text="@string/greenButton"/>
</RadioGroup>
<Button android:id="@+id/button1"
    android:text="@string/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</LinearLayout>